--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
-    <head>testing</head>
-    <body>
-        <script src="js/index.js"></script>
-    </body>
+
+<head>
+    <title>testing</title>
+</head>
+
+<body>
+    <div id="doc">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
+    <script src="js/index.js"></script>
+</body>
+
 </html>
