--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <title>testing</title>
+    <title>rainforwind</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
