--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>如风小鸽</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css" integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
+        integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body>
     <header>如风小鸽 <sub>的个人站点</sub></header>
-    <div id="doc" class="markdown-body">
+    <div id="navi">
+        <a onclick="showIndex()">首页</a>
+        <a onclick="showMenu()">目录</a>
+        <a onclick="showTags()">标签</a>
+        <a onclick="showAbout()">关于</a>
+    </div>
+    <div id="doc" class="markdown-body"></div>
+    <footer>未经授权，禁止转载。谣言转发XXX条是要入刑的。</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
     <script src="js/index.js"></script>
-    <footer></footer>
 </body>
+
 </html>
