try webp as favicon format

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/index.css" />
+    <linkrel="shortcut icon"type="image/webp"href="favicon.webp"></linkrel>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         </ul>
     </div>
     <div id="doc" class="markdown-body"></div>
-    <footer>未经授权，禁止转载。谣言转发500次是要入刑的</footer>
+    <footer>未经授权，禁止转载。谣言转发500次是要入刑的:P</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
     <script src="js/index.js"></script>
 </body>
