--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/index.css" />
-    <linkrel="shortcut icon"type="image/webp"href="favicon.webp"></linkrel>
+    <link rel="shortcut icon" type="image/webp" href="favicon.webp"/>
 </head>
 
 <body>
